--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "vue-router": "^3.4.3"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^2.1.2",
+    "@eslint/js": "^9.0.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
